# Naive-Bayes-Classifier

./: CMakeLists.txt  beer.csv
include/: NaiveBayesClassifier.h  NaiveBayesUtils.h  util.h
src/: NaiveBayesClassifier.cpp  NaiveBayesUtils.cpp  main.cpp
